--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -5,8 +5,66 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Cinema"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MainWindow" 
+        Height="800" Width="1200"
+        WindowStartupLocation="CenterScreen">
+    <Grid Background="#8C6DD7">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="Список фильмов"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   FontSize="36"
+                   FontWeight="Medium"
+                   Margin="0 10 0 0"
+            />
+
+        <ListView x:Name="LvFilmList" 
+                  Grid.Row="2"
+                  BorderThickness="0"
+                  HorizontalAlignment="Center"
+                  d:ItemsSource="{d:SampleData ItemCount=7}"
+                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                  ScrollViewer.VerticalScrollBarVisibility="Hidden"
+                  Background="#8C6DD7">
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel/>
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Border BorderBrush="#259238"
+                            BorderThickness="1"
+                            Margin="5"
+                            Width="200"
+                            Height="320"
+                            Background="#00C322"
+                            MouseLeftButtonUp="Border_MouseLeftButtonUp">
+                        <StackPanel>
+                            <Image Height="266"
+                                   Width="200">
+                            </Image>
+                            <TextBlock Text="{Binding MovieTitle}"
+                                       FontSize="18"
+                                       FontWeight="Bold"
+                                       Margin="5 0 0 0"
+                                       TextWrapping="Wrap"/>
+
+                            <TextBlock Text="{Binding Rating}"
+                                       FontSize="18"
+                                       FontWeight="Light"
+                                       Margin="10 0 0 0"/>
+                        </StackPanel>
+                    </Border>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+
+        </ListView>
     </Grid>
 </Window>
