--- a/Pages/InfoCashReceiptPage.xaml
+++ b/Pages/InfoCashReceiptPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Cinema.Pages.InfoFilmPage"
+﻿<Page x:Class="Cinema.Pages.InfoCashReceiptPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Cinema.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="InfoFilmPage">
+      Title="InfoCashReceiptPage">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -25,7 +25,7 @@
                      Height="35"
                      FontSize="18" 
                      VerticalContentAlignment="Center"
-                     TextChanged ="TxbSearch_TextChanged"/>
+                     TextChanged = "TxbSearch_TextChanged"/>
 
             <TextBlock Text="Сортировка"
                         Margin="10"
@@ -44,17 +44,11 @@
                   AutoGenerateColumns="False"
             VerticalScrollBarVisibility="Hidden">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="IdFilm" Binding="{Binding IdFilm}"/>
-                <DataGridTextColumn Header="MovieTitle" Binding="{Binding MovieTitle}"/>
-                <DataGridTextColumn Header="Description" Binding="{Binding Description}"/>
-                <DataGridTextColumn Header="Director" Binding="{Binding Director}"/>
-                <DataGridTextColumn Header="DurationInMinute" Binding="{Binding DurationInMinute}"/>
-                <DataGridTextColumn Header="PremierDate" Binding="{Binding PremierDate}"/>
-                <DataGridTextColumn Header="IdAgeRestriction" Binding="{Binding IdAgeRestriction}"/>
-                <DataGridTextColumn Header="Rating" Binding="{Binding Rating}"/>
-                <DataGridTextColumn Header="IdMovieStudio" Binding="{Binding IdMovieStudio}"/>
-                <DataGridTextColumn Header="MovieBudget" Binding="{Binding MovieBudget}"/>
-                <DataGridTextColumn Header="IdMovieDistributor" Binding="{Binding IdMovieDistributor}"/>
+                <DataGridTextColumn Header="IdCashReceipt" Binding="{Binding IdCashReceipt}"/>
+                <DataGridTextColumn Header="IdUser" Binding="{Binding IdUser}"/>
+                <DataGridTextColumn Header="IdEmployee" Binding="{Binding IdEmployee}"/>
+                <DataGridTextColumn Header="DateSale" Binding="{Binding DateSale}"/>
+                <DataGridTextColumn Header="FullCost" Binding="{Binding FullCost}"/>
             </DataGrid.Columns>
 
         </DataGrid>
@@ -62,18 +56,17 @@
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center">
             <Button x:Name="btnAdd"
-                    Content="Добавить фильм"
+                    Content="Добавить чек"
                     Style="{StaticResource btnStyle}"
                     Margin="10"
-                    Width="172" Click="btnAdd_Click"/>
+                    Width="172"
+                    Click="btnAdd_Click"/>
             <Button x:Name="btnEdit"
-                    Content="Изменить фильм"
+                    Content="Изменить чек"
                     Margin="10"
-                    Style="{StaticResource btnStyle}" Width="172" Click="btnEdit_Click"/>
-            <Button x:Name="btnDelete"
-                    Content="Удалить фильм"
-                    Margin="10"
-                    Style="{StaticResource btnStyle}" Width="172" Click="btnDelete_Click"/>
+                    Style="{StaticResource btnStyle}"
+                    Width="172" 
+                    Click="btnEdit_Click"/>
         </WrapPanel>
     </Grid>
 </Page>
