--- a/Pages/InfoSessionPage.xaml
+++ b/Pages/InfoSessionPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Cinema.Pages.InfoFilmPage"
+﻿<Page x:Class="Cinema.Pages.InfoSessionPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Cinema.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="InfoFilmPage">
+      Title="InfoSessionPage">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -44,17 +44,12 @@
                   AutoGenerateColumns="False"
             VerticalScrollBarVisibility="Hidden">
             <DataGrid.Columns>
+                <DataGridTextColumn Header="IdSessionFilm" Binding="{Binding IdSessionFilm}"/>
+                <DataGridTextColumn Header="DateTimeStart" Binding="{Binding DateTimeStart}"/>
+                <DataGridTextColumn Header="DateTimeFinal" Binding="{Binding DateTimeFinal}"/>
+                <DataGridTextColumn Header="IdMovieHall" Binding="{Binding IdMovieHall}"/>
                 <DataGridTextColumn Header="IdFilm" Binding="{Binding IdFilm}"/>
-                <DataGridTextColumn Header="MovieTitle" Binding="{Binding MovieTitle}"/>
-                <DataGridTextColumn Header="Description" Binding="{Binding Description}"/>
-                <DataGridTextColumn Header="Director" Binding="{Binding Director}"/>
-                <DataGridTextColumn Header="DurationInMinute" Binding="{Binding DurationInMinute}"/>
-                <DataGridTextColumn Header="PremierDate" Binding="{Binding PremierDate}"/>
-                <DataGridTextColumn Header="IdAgeRestriction" Binding="{Binding IdAgeRestriction}"/>
-                <DataGridTextColumn Header="Rating" Binding="{Binding Rating}"/>
-                <DataGridTextColumn Header="IdMovieStudio" Binding="{Binding IdMovieStudio}"/>
-                <DataGridTextColumn Header="MovieBudget" Binding="{Binding MovieBudget}"/>
-                <DataGridTextColumn Header="IdMovieDistributor" Binding="{Binding IdMovieDistributor}"/>
+                <DataGridTextColumn Header="Price" Binding="{Binding Price}"/>
             </DataGrid.Columns>
 
         </DataGrid>
@@ -62,18 +57,15 @@
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center">
             <Button x:Name="btnAdd"
-                    Content="Добавить фильм"
+                    Content="Добавить сеанс"
                     Style="{StaticResource btnStyle}"
                     Margin="10"
                     Width="172" Click="btnAdd_Click"/>
             <Button x:Name="btnEdit"
-                    Content="Изменить фильм"
+                    Content="Изменить сеанс"
                     Margin="10"
-                    Style="{StaticResource btnStyle}" Width="172" Click="btnEdit_Click"/>
-            <Button x:Name="btnDelete"
-                    Content="Удалить фильм"
-                    Margin="10"
-                    Style="{StaticResource btnStyle}" Width="172" Click="btnDelete_Click"/>
+                    Style="{StaticResource btnStyle}" 
+                    Width="172" Click="btnEdit_Click"/>
         </WrapPanel>
     </Grid>
 </Page>
