--- a/Pages/InfoUserPage.xaml
+++ b/Pages/InfoUserPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Cinema.Pages.InfoFilmPage"
+﻿<Page x:Class="Cinema.Pages.InfoUserPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Cinema.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="InfoFilmPage">
+      Title="InfoUserPage">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -44,17 +44,16 @@
                   AutoGenerateColumns="False"
             VerticalScrollBarVisibility="Hidden">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="IdFilm" Binding="{Binding IdFilm}"/>
-                <DataGridTextColumn Header="MovieTitle" Binding="{Binding MovieTitle}"/>
-                <DataGridTextColumn Header="Description" Binding="{Binding Description}"/>
-                <DataGridTextColumn Header="Director" Binding="{Binding Director}"/>
-                <DataGridTextColumn Header="DurationInMinute" Binding="{Binding DurationInMinute}"/>
-                <DataGridTextColumn Header="PremierDate" Binding="{Binding PremierDate}"/>
-                <DataGridTextColumn Header="IdAgeRestriction" Binding="{Binding IdAgeRestriction}"/>
-                <DataGridTextColumn Header="Rating" Binding="{Binding Rating}"/>
-                <DataGridTextColumn Header="IdMovieStudio" Binding="{Binding IdMovieStudio}"/>
-                <DataGridTextColumn Header="MovieBudget" Binding="{Binding MovieBudget}"/>
-                <DataGridTextColumn Header="IdMovieDistributor" Binding="{Binding IdMovieDistributor}"/>
+                <DataGridTextColumn Header="IdUser" Binding="{Binding IdUser}"/>
+                <DataGridTextColumn Header="LastName" Binding="{Binding LastName}"/>
+                <DataGridTextColumn Header="FirstName" Binding="{Binding FirstName}"/>
+                <DataGridTextColumn Header="Patronymic" Binding="{Binding Patronymic}"/>
+                <DataGridTextColumn Header="Birthday" Binding="{Binding Birthday}"/>
+                <DataGridTextColumn Header="Email" Binding="{Binding Email}"/>
+                <DataGridTextColumn Header="PhoneNumber" Binding="{Binding PhoneNumber}"/>
+                <DataGridTextColumn Header="PersonalBonus" Binding="{Binding PersonalBonus}"/>
+                <DataGridTextColumn Header="IdTag" Binding="{Binding IdTag}"/>
+                <DataGridTextColumn Header="Password" Binding="{Binding Password}"/>
             </DataGrid.Columns>
 
         </DataGrid>
@@ -62,18 +61,14 @@
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center">
             <Button x:Name="btnAdd"
-                    Content="Добавить фильм"
+                    Content="Добавить покупателя"
                     Style="{StaticResource btnStyle}"
-                    Margin="10"
-                    Width="172" Click="btnAdd_Click"/>
+                    Width="202" Click="btnAdd_Click"/>
             <Button x:Name="btnEdit"
-                    Content="Изменить фильм"
-                    Margin="10"
-                    Style="{StaticResource btnStyle}" Width="172" Click="btnEdit_Click"/>
-            <Button x:Name="btnDelete"
-                    Content="Удалить фильм"
-                    Margin="10"
-                    Style="{StaticResource btnStyle}" Width="172" Click="btnDelete_Click"/>
+                    Content="Изменить покупателя"
+                    Margin="5"
+                    Style="{StaticResource btnStyle}" 
+                    Width="202" Click="btnEdit_Click"/>
         </WrapPanel>
     </Grid>
 </Page>
