--- a/Pages/AddEditProductPage.xaml
+++ b/Pages/AddEditProductPage.xaml
@@ -103,6 +103,7 @@
                     Margin="0 15 0 0"
                     Width="240"
                     Height="40"
+                    FontSize="16"
                        />
 
         </StackPanel>
