--- a/Pages/AddEditTicketPage.xaml
+++ b/Pages/AddEditTicketPage.xaml
@@ -78,7 +78,8 @@
                     HorizontalAlignment="Left"
                     VerticalContentAlignment="Center"
                     HorizontalContentAlignment="Left"
-                        Margin="0 15 0 0"
+                    FontSize="16"
+                    Margin="0 15 0 0"
                        />
             <TextBlock Text="Введите цену"
                    FontSize="18"
